# cookiecutter-pypackage

./: .bumpversion.cfg  CONTRIBUTING.md  CONTRIBUTING.rst  Makefile  README.md  cookiecutter.json  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: dev.yml  publish.yml
docs/: changelog.md  faq.md  history.md  pypi_release_checklist.md  tutorial.md
hooks/: post_gen_project.py
tests/: test_bake_project.py
{{cookiecutter.project_slug}}/: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  environment.yml  makefile  mkdocs.yml  pyproject.toml  setup.cfg  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  preview.yml  pull-request.yml  push.yml  release.yml
{{cookiecutter.project_slug}}/docs/: installation.md
{{cookiecutter.project_slug}}/tests/: conftest.py
{{cookiecutter.project_slug}}/{{cookiecutter.pkg_name}}/: cli.py
