[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.1.1"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Xie Wei <ampedee@gmail.com>", "Luis C. Berrocal <luis.berrocal.1942@gmail.com>"]
readme = "README.md"
repository = "https://github.com/waynerv/cookiecutter-pypackage"
documentation = "https://waynerv.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.8.*"
cookiecutter = "1.7.2"
click = "^8.1.3"

# pytest-cookies = {version = "^0.6.1", optional=true}
# pyyaml = {version="^5.3.1",optional=true}
# mkdocs-material-extensions = {version="^1.0.1",optional=true}
# tox = {version = "^3.20.1", optional=true}

 #[tool.poetry.group.dev.dependencies]
 #pytest = "^7.2.0"
 #pytest-cov = "^4.0.0"
 #black = "^22.10.0"
 #isort = "^5.10.1"
 #mypy = "^0.990"
 #flake8 = "^5.0.4"
 #flake8-docstrings = "^1.6.0"
 #factory-boy = "^3.2.1"
 #pytz = "^2022.6"
 #
 #[tool.poetry.group.doc.dependencies]
 #mkdocs = "^1.4.2"
 #mkdocs-include-markdown-plugin = "^3.9.1"
 #mkdocs-material = "^8.5.10"
 #mkdocstrings = "^0.19.0"
 #mkdocs-autorefs = "^0.4.1"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
