[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.2.0"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Nords Morrow <nordsofmorrow@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/waynerv/cookiecutter-pypackage"
documentation = "https://waynerv.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.12"
cookiecutter = "2.1.1"
cruft = "^2.12.0"

pytest = {version = "^7.0.0", optional=true}
pytest-cookies = {version = "^0.6.1", optional=true}
pyyaml = {version="^6.0",optional=true}
mkdocs = {version="^1.4.0",optional=true}
mkdocs-material = {version="^9.0",optional=true}
mkdocs-material-extensions = {version="^1.1.0",optional=true}
pytest-cov = {version="^4.0.0",optional=true}
tox = {version = "^4.3.0", optional=true}
mkdocs-include-markdown-plugin = {version = "^4.0.0", optional=true}
click = {version = "^8.0.1", optional = true}

[tool.poetry.extras]
dev = [
  "pytest",
  "pytest-cookies",
  "pyyaml",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "pytest-cov",
  "tox",
  "mkdocs-include-markdown-plugin",
  "click"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
