[tool]
[tool.poetry]
name = "cookiecutter-pypackage"
version = "1.2.0"
description = "Cookiecutter template for a Python package"
license = "BSD-3-Clause"
authors = ["Xie Wei <ampedee@gmail.com>", "Luis C. Berrocal <luis.berrocal.1942@gmail.com>"]
readme = "README.md"
repository = "https://github.com/luiscberrocal/cookiecutter-pypackage"
documentation = "https://luiscberrocal.github.io/cookiecutter-pypackage/"
keywords = ['cookiecutter', 'template', 'package']

include = [
  '{{cookiecutter.project_slug}}/**/*',
  'cookiecutter.json',
  'hooks/*'
]

[tool.poetry.dependencies]
python = ">=3.9.0,<3.12"
cookiecutter = "^1.7.2"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
black = "^22.10.0"
isort = "^5.10.1"
mypy = "^0.991"
flake8 = "^6.0.0"
flake8-docstrings = "^1.6.0"
factory-boy = "^3.2.1"
pytz = "^2022.6"
tox = "^3.27.1"
pyyaml = "^6.0"
pytest-cookies = "^0.6.1"

[tool.poetry.group.doc.dependencies]
mkdocs = "^1.5.3"
mkdocs-include-markdown-plugin = "^6.0.3"
mkdocs-material = "^9.4.6"
mkdocs-autorefs = "^0.5.0"

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
